# shapespaceexplorer

./: .hgignore  CMakeLists.txt  Diverse.rc  README.md  main.cpp
Data/: CoordinateFrame.cpp  CoordinateFrame.h  LinearMorphTrajectory.cpp  LinearMorphTrajectory.h  LinearPopulationTrajectory.cpp  LinearPopulationTrajectory.h  PickInfo.cpp  PickInfo.h  Population.cpp  Population.h  ShapeMesh.cpp  ShapeMesh.h  ShapeModel.cpp  ShapeModel.h  ShapeTrajectory.cpp  ShapeTrajectory.h  Utility.cpp  Utility.h
Gui/: MainViewer.cpp  MainViewer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MeshViewer.cpp  MeshViewer.h  ScatterPlotInteractor.cpp  ScatterPlotInteractor.h  ScatterPlotViewer.cpp  ScatterPlotViewer.h  ShapeEvolutionViewer.cpp  ShapeEvolutionViewer.h  ShapeStackControls.cpp  ShapeStackControls.h  ShapeStackControls.ui  ShapeStackViewer.cpp  ShapeStackViewer.h
Rendering/: ContoursRenderer.cpp  ContoursRenderer.h  EvolutionConfiguration.cpp  EvolutionConfiguration.h  EvolutionSlice.cpp  EvolutionSlice.h  GPUVoronoi.cpp  GPUVoronoi.h  MeshRenderer.cpp  MeshRenderer.h  OverlayConfiguration.cpp  OverlayConfiguration.h  PopulationProjectionStack.cpp  PopulationProjectionStack.h  ScatterPlotRenderer.cpp  ScatterPlotRenderer.h  ScatterShapesRenderer.cpp  ScatterShapesRenderer.h  ShapeEvolutionRenderer.cpp  ShapeEvolutionRenderer.h  ShapeSpaceLineStack.cpp  ShapeSpaceLineStack.h  ShapeStack.cpp  ShapeStack.h  ShapeStackConfiguration.cpp  ShapeStackConfiguration.h  ShapeStackRenderer.cpp  ShapeStackRenderer.h  SideBySideConfiguration.cpp  SideBySideConfiguration.h
Shaders/: CompositeShaderFS.txt  CompositeShaderVS.txt  ConeShaderFS.txt  MeshScribeFS.txt  MeshScribeVS.txt  MeshShaderFS.txt  MeshShaderVS.txt
